--- a/server/views/admin/article-edit.html
+++ b/server/views/admin/article-edit.html
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group">
                 <label for="body">文章内容</label> 
-                <textarea name="body" id="body" class="form-control" rows="20" required="required">{{article.body}}</textarea>
+                <textarea name="body" id="body" style="height:500px;">{{article.body}}</textarea>
                 
             </div>
         
@@ -27,6 +27,9 @@
     {% endblock%}    
     
         
-{% block js %}    
+{% block js %}
+    <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.min.js"> </script>
+    <script type="text/javascript" charset="utf-8" src="/ueditor/lang/zh-cn/zh-cn.js"> </script>    
     <script data-main="admin/article/edit" src="/public/common/main.js"></script>
 {% endblock%}
