--- a/server/views/admin/layout.html
+++ b/server/views/admin/layout.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- 父亲模板占位，可以被子模板覆盖的东西 -->
     <title>{% block title %}首页{% endblock%}</title>
+    {% if !isDev %}
+    <link rel="stylesheet" href="/public/css/admin-lib.css">
+    {% endif %}
     {% block css %} {% endblock%}
 </head>
 
@@ -45,8 +48,10 @@
     {% block content %} {% endblock%}
     <script src="/public/common/admin-lib.js"></script>
     {% block js %} {% endblock%}
+    {% if isDev %}
     <!-- 服务器启动后浏览器页面自动刷新 -->
     <script src="/reload/reload.js"></script>
+    {% endif %}
 </body>
 
 </html>
